--- a/ERS/src/main/resources/application.yml
+++ b/ERS/src/main/resources/application.yml
@@ -3,7 +3,8 @@ server:
  
 spring:
   datasource:
-    url: jdbc:postgresql://${ERS_DB_ENDPOINT}/{ERS_DB_DBNAME}
+    url: jdbc:postgresql://${ERS_DB_ENDPOINT}/${ERS_DB_DBNAME}
+    
     username: ${ERS_DB_USERNAME}
     password: ${ERS_DB_PASSWORD}
     driver-class-name: org.postgresql.Driver
@@ -11,4 +12,5 @@ spring:
     database-platform: org.hibernate.dialect.PostgreSQLDialect
     show-sql: true
     hibernate:
-      ddl-auto: none
+#      ddl-auto: none
+      ddl-auto: create
