--- a/ERS/buildspec.yml
+++ b/ERS/buildspec.yml
@@ -4,15 +4,16 @@ phases:
   install:
     runtime-versions:
       java: corretto11
+  pre_build:
+    commands:
+      - echo Nothing to do in the pre_build phase...
   build:
     commands:
-      - mvn clean install
+      - echo Build started on `date`
+      - mvn install
   post_build:
     commands:
-      - echo Build completed
+      - echo Build completed on `date`
 artifacts:
   files:
-    - target/*.jar
-    - scripts/*.sh
-    - appspec.yml
-  discard-paths: yes
+    - target/messageUtil-1.0.jar
