--- a/ERS/buildspec.yml
+++ b/ERS/buildspec.yml
@@ -18,5 +18,5 @@ artifacts:
   files:
     - target/*.jar
     - scripts/*.sh
-    - ./ERS/appspec.yml
+    - ../ERS/appspec.yml
   discard-paths: yes
