--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -16,8 +16,8 @@ spring:
     database-platform: org.hibernate.dialect.PostgreSQLDialect
     show-sql: true
     hibernate:
-#      ddl-auto: none
+      ddl-auto: none
 #      ddl-auto: create-drop
-       ddl-auto: create
+#       ddl-auto: create
   
       
