--- a/pom.xml
+++ b/pom.xml
@@ -37,8 +37,6 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-mail</artifactId>
 		</dependency>
-		<!-- <dependency> <groupId>org.springframework.boot</groupId> <artifactId>spring-boot-starter-security</artifactId> 
-			</dependency> -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
@@ -66,9 +64,27 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
-		<!-- <dependency> <groupId>org.springframework.security</groupId> <artifactId>spring-security-test</artifactId> 
-			<scope>test</scope> </dependency> -->
-
+		
+		<!--SPRING SECURITY   -->
+		<!--SPRING SECURITY   -->
+		<!--SPRING SECURITY   -->
+		<!--SPRING SECURITY   -->
+		<!--SPRING SECURITY   -->
+				<!-- <dependency> 
+					<groupId>org.springframework.security</groupId> 
+					<artifactId>spring-security-test</artifactId> 
+					<scope>test</scope> 
+				</dependency>
+		
+				<dependency> 
+					<groupId>org.springframework.boot</groupId> 
+					<artifactId>spring-boot-starter-security</artifactId> 
+				</dependency> -->
+		<!--SPRING SECURITY   -->
+		<!--SPRING SECURITY   -->
+		<!--SPRING SECURITY   -->
+		<!--SPRING SECURITY   -->
+		<!--SPRING SECURITY   -->
 
 		<dependency>
 			<groupId>org.junit.jupiter</groupId>
