Simple messages w Spring Mail

--- a/pom.xml
+++ b/pom.xml
@@ -70,7 +70,7 @@
 		<!--SPRING SECURITY   -->
 		<!--SPRING SECURITY   -->
 		<!--SPRING SECURITY   -->
-				<dependency> 
+				<!-- <dependency> 
 					<groupId>org.springframework.security</groupId> 
 					<artifactId>spring-security-test</artifactId> 
 					<scope>test</scope> 
@@ -79,7 +79,7 @@
 				<dependency> 
 					<groupId>org.springframework.boot</groupId> 
 					<artifactId>spring-boot-starter-security</artifactId> 
-				</dependency>
+				</dependency> -->
 		<!--SPRING SECURITY   -->
 		<!--SPRING SECURITY   -->
 		<!--SPRING SECURITY   -->
