--- a/pom.xml
+++ b/pom.xml
@@ -42,6 +42,21 @@
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
 
+		<!-- https://mvnrepository.com/artifact/com.amazonaws/aws-java-sdk-s3 -->
+		<!-- <dependency> <groupId>com.amazonaws</groupId> <artifactId>aws-java-sdk-s3</artifactId> 
+			<version>1.12.286</version> </dependency> -->
+		<!-- <dependency>
+			<groupId>com.amazonaws</groupId>
+			<artifactId>aws-java-sdk-s3</artifactId>
+			<version>1.11.64</version>
+		</dependency> -->
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-aws</artifactId>
+			<version>2.2.6.RELEASE</version>
+		</dependency>
+
+
 		<dependency>
 			<groupId>com.h2database</groupId>
 			<artifactId>h2</artifactId>
@@ -64,27 +79,27 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
-		
-		<!--SPRING SECURITY   -->
-		<!--SPRING SECURITY   -->
-		<!--SPRING SECURITY   -->
-		<!--SPRING SECURITY   -->
-		<!--SPRING SECURITY   -->
-				<dependency> 
-					<groupId>org.springframework.security</groupId> 
-					<artifactId>spring-security-test</artifactId> 
-					<scope>test</scope> 
-				</dependency>
-		
-				<dependency> 
-					<groupId>org.springframework.boot</groupId> 
-					<artifactId>spring-boot-starter-security</artifactId> 
-				</dependency>
-		<!--SPRING SECURITY   -->
-		<!--SPRING SECURITY   -->
-		<!--SPRING SECURITY   -->
-		<!--SPRING SECURITY   -->
-		<!--SPRING SECURITY   -->
+
+		<!--SPRING SECURITY -->
+		<!--SPRING SECURITY -->
+		<!--SPRING SECURITY -->
+		<!--SPRING SECURITY -->
+		<!--SPRING SECURITY -->
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-test</artifactId>
+			<scope>test</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-security</artifactId>
+		</dependency>
+		<!--SPRING SECURITY -->
+		<!--SPRING SECURITY -->
+		<!--SPRING SECURITY -->
+		<!--SPRING SECURITY -->
+		<!--SPRING SECURITY -->
 
 		<dependency>
 			<groupId>org.junit.jupiter</groupId>
@@ -99,10 +114,17 @@
 			<groupId>org.mockito</groupId>
 			<artifactId>mockito-junit-jupiter</artifactId>
 		</dependency>
-	</dependencies>
+	</dependencies>	
+	
+	
 
 	<build>
 		<plugins>
+			<plugin>
+				<groupId>org.springframework.boot</groupId>
+				<artifactId>spring-boot-maven-plugin</artifactId>
+			</plugin>
+			
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
