--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -44,9 +44,9 @@ spring:
     database-platform: org.hibernate.dialect.PostgreSQLDialect
     show-sql: false
     hibernate:
-#      ddl-auto: none
+      ddl-auto: none
 #      ddl-auto: create-drop
-       ddl-auto: create
+#       ddl-auto: create
   mail:
     default-encoding: UTF-8
     host: smtp.gmail.com
