--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,7 +3,11 @@ server:
   servlet:
     session:
       cookie:
-        same-site: strict
+#        secure: false
+#        same-site: strict
+        same-site: lax
+#        secure: false
+       
 
 cloud:
 
