--- a/ERS_Angular/angular.json
+++ b/ERS_Angular/angular.json
@@ -66,6 +66,11 @@
           "defaultConfiguration": "production"
         },
         "serve": {
+          "options": {
+            "sslKey": "../src/main/resources/ers137.key",
+            "sslCert": "../src/main/resources/ers37.crt",
+            "ssl": true            
+          },
           "builder": "@angular-devkit/build-angular:dev-server",         
           "configurations": {
             "production": {
