--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,7 +7,12 @@ server:
 #        same-site: strict
         same-site: lax
 #        secure: false
-       
+
+  ssl:
+    key-alias: ers137-alias
+    key-store-type: PKCS12
+    key-store-password: password
+    key-store: classpath:securitykeystore.p12       
 
 cloud:
 
